APIs/googleapis.com/identitytoolkit/v3/cpp-qt-client/README.md
# C++ Qt API client

# 

Google Identity Toolkit API

- API version: v3
- Generator version: 7.9.0

Help the third party sites to implement federated login.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:

1. CMake 3.2+
2. Qt
3. C++ Compiler

## Getting Started

example.h:
```c++

#include <iostream>
#include "../client/OAIRelyingpartyApi.h"

using namespace test_namespace;

class Example : public QObject {
    Q_OBJECT
    QString create();
    QString create();
    QString create();
    QString create();
    bool create();
    QString create();
    QString create();
    OAIIdentitytoolkitRelyingpartyCreateAuthUriRequest create();
public Q_SLOTS:
   void exampleFunction1();
};

```

example.cpp:
```c++

#include "../client/OAIRelyingpartyApi.h"
#include "example.h"
#include <QTimer>
#include <QEventLoop>

QString Example::create(){
    QString obj;
QString Example::create(){
    QString obj;
QString Example::create(){
    QString obj;
QString Example::create(){
    QString obj;
bool Example::create(){
    bool obj;
QString Example::create(){
    QString obj;
QString Example::create(){
    QString obj;
OAIIdentitytoolkitRelyingpartyCreateAuthUriRequest Example::create(){
    OAIIdentitytoolkitRelyingpartyCreateAuthUriRequest obj;
 return obj;
}

void Example::exampleFunction1(){
     OAIRelyingpartyApi apiInstance;
     
      //OAuth Authentication supported right now

      //OAuth Authentication supported right now

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString alt = create(); // QString | Data format for the response.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString fields = create(); // QString | Selector specifying which fields to include in a partial response.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString key = create(); // QString | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString oauth_token = create(); // QString | OAuth 2.0 token for the current user.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      bool pretty_print = create(); // bool | Returns response with indentations and line breaks.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString quota_user = create(); // QString | An opaque string that represents a user for quota purposes. Must not exceed 40 characters.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      QString user_ip = create(); // QString | Deprecated. Please use quotaUser instead.

      QEventLoop loop;
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignal, [&]() {
          loop.quit();
      });
      connect(&apiInstance, &OAIRelyingpartyApi::identitytoolkit_relyingparty_createAuthUriSignalE, [&](QNetworkReply::NetworkError, QString error_str) {
          qDebug() << "Error happened while issuing request : " << error_str;
          loop.quit();
      });

      OAIIdentitytoolkitRelyingpartyCreateAuthUriRequest oai_identitytoolkit_relyingparty_create_auth_uri_request = create(); // OAIIdentitytoolkitRelyingpartyCreateAuthUriRequest | 
      apiInstance.identitytoolkit_relyingparty_createAuthUri(altfieldskeyoauth_tokenpretty_printquota_useruser_ipoai_identitytoolkit_relyingparty_create_auth_uri_request);
      QTimer::singleShot(5000, &loop, &QEventLoop::quit);
      loop.exec();
  }

```

## Documentation for Servers

Parameterized Servers are supported. Define a server in the API for each endpoint with arbitrary numbers of variables:

```yaml
servers:
- url: http://{server}:{port}/{basePath}
  description: Description of the Server
  variables:
    server:
        enum:
          - 'petstore'
          - 'qa-petstore'
          - 'dev-petstore'
        default: 'petstore'
    port:
      enum:
        - '3000'
        - '1000'
      default: '3000'
    basePath:
      default: v1
```
To change the default variable, use this function in each Api:
```c++
int setDefaultServerValue(int serverIndex,const QString &operation, const QString &variable,const QString &val);
```
The parameter "serverIndex" will choose a server from the server list for each endpoint. There is always at least one server with index 0. The Parameter "operation" should be the desired endpoint operationid.
Variable is the name of the variable you wish to change and the value is the new default Value.
The function will return -1 when the variable does not exists, -2 if value is not defined in the variable enum and -3 if the operation is not found.

If your endpoint has multiple server objects in the servers array, you can set the server that will be used with this function:
```c++
void setServerIndex(const QString &operation, int serverIndex);
```
Parameter "operation" should be your operationid. "serverIndex" is the index you want to set as your default server. The function will check if there is a server with your index.
Here is an example of multiple servers in the servers array. The first server will have index 0 and the second will have index 1.
```yaml
servers:
- url: http://{server}:8080/
  description: Description of the Server
  variables:
    server:
        enum:
          - 'petstore'
          - 'qa-petstore'
          - 'dev-petstore'
        default: 'petstore'
- url: https://localhost:8080/v1
```

## Documentation for Authorization

Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: View and manage your data across Google Cloud Platform services
  - https://www.googleapis.com/auth/firebase: View and administer all your Firebase data and settings

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: View and manage your data across Google Cloud Platform services
  - https://www.googleapis.com/auth/firebase: View and administer all your Firebase data and settings


## Author




## License

Creative Commons Attribution 3.0 for more information visit [Creative Commons Attribution 3.0](http://creativecommons.org/licenses/by/3.0/)